<resources>
    <string name="app_name">LinearLayoutDanang</string>
    <string name="edEmail">Email</string>
    <string name="edPassword">Password</string>
    <string name="btSignIn">Sign-In</string>
    <string name="tLogin">LOGIN</string>
    <string name="tData">Data Anda</string>
    <string name="tEmail">Email: </string>
    <string name="tPassword">Password: </string>
    <string name="txemail">ini hasil Email</string>
    <string name="txpassword">ini hasil Password</string>
    <string name="label2">Login Berhasil</string>
</resources>