<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tData"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="122dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/tEmail"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="220dp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="122dp"
        android:layout_height="35dp"
        android:text="@string/txemail"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="184dp"
        tools:layout_editor_absoluteY="222dp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/tPassword"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="306dp" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="133dp"
        android:layout_height="38dp"
        android:text="@string/txpassword"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="306dp" />
</androidx.constraintlayout.widget.ConstraintLayout>